 $Id: ChangeLog,v 1.131.2.25.2.160 2011/01/12 17:14:36 uehira Exp $

2011-01-12  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.21 released.
	* read_onesec_win(), read_onesec_win2() : fixed a bug. These bugs
	damaged 'wadd' and 'wadd2' fatally.
	* always specify void even if a function accepts no arguments.

2011-01-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.20 released.
	* src/recvt.c : print statistics if time diff. != 0.

2011-01-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/events.c : buffer overflow check.
	* src/pmon.c : buffer overflow check.
	* src/recvt_LS7000.c : fixed buffer overflow.
	* src/relaym.c : fixed buffer overflow.
	* src/wdiskts.c : fixed buffer overflow.

2011-01-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvt.c : added -e option. fixed buffer overflow.
	* src/relay.c : added -e option. fixed buffer overflow.
	* src/order.c : fixed buffer overflow.
	* src/send_raw.c : fixed buffer overflow.
	* src/wdisk.c : fixed buffer overflow.

2010-12-28  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 2.1.19 released.
	* src/win.c : avoid 0 byte malloc request in just_hypo mode.

2010-12-24  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c : avoid 0 byte malloc request in map mode.

2010-12-23  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Explicitly specify array bounds.

2010-12-22  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win_xmalloc.c : added.
	malloc() --> win_xmalloc() or MALLOC()
	realloc() --> win_xrealloc() or REALLOC()
	calloc() --> win_xcalloc() or CALLOC().
	free() --> win_xfree() or FREE().
	* src/winlib.c : added get_sysch_mon().
	* src/winadd.c : added -M option.

2010-12-21  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Renamed 'wconst.h' to 'w_const.h'.
	* Renamed 'wmacros.h' to 'w_macros.h'.
	* Renamed 'wproto.h' to 'w_proto.h'.
	* Renamed 'wstruct.h' to 'w_struct.h'.
	* Renamed 'daily_rawdiff' to 'daily_windiff'.
